# EaD

./: CMakeLists.txt  EaD.cpp  README.md  main.cpp  run  sample_md5_test  sample_test
BLAKE2b/: blake2-impl.h  blake2.h
include/: bloom_func.h  cache.h  com_t.h  dedup.h  mt.h  new_cache.h  tpdef.h
src/: blake2b.c  bloom_func.cpp  cache.cpp  com_t.cpp  dedup.cpp  mt.cpp  new_cache.cpp
test/: CMakeLists.txt  ead_evaluation_v1.sh  ead_evaluation_v2.sh  ecc_length_evaluation_v1.sh  ecc_length_evaluation_v2.sh  prefetch_cache_v1.sh  prefetch_cache_v2.sh  running_vmdk.sh  test_bloom.cpp  test_cache.cpp  test_dedup.cpp  test_mt.cpp  test_new_cache.cpp
